# compliencechange

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SECURITY_FIXES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: api.py  cli.py  db.py  main.py  models.py  relevance.py  schema.py
app/collectors/: __init__.py  australia.py  base.py  european_union.py  international.py  united_kingdom.py  united_states.py
data/: sources.yaml
templates/: index.html
tests/: conftest.py  test_api.py  test_collectors.py  test_database.py  test_relevance.py
